--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-this is the final code of lab 4, and i have made ejs files for a website named as my favourite singers'.
+this is the final code of lab 4, and i have made ejs files for a website named as my favourite singers'. Here's the link to the website: https://favourite-singers.onrender.com 
+thanks a lot for the assignment, learned a lot.
